# instagramapi-bot

./: .gitignore  Dockerfile  Jenkinsfile  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
api/: main.py
api/routes/: subscription.py  web.py
api/schemas/: subscription.py
api/services/: subscription.py
app/: controller.py  main.py
app/handlers/: __init__.py  start.py  subscription.py  tracking.py  tracking_media.py
app/repositories/: instagram.py  keyboard.py  tracking.py  user.py
app/schemas/: action_callback.py  instagram.py  texts.py
app/services/: tracking.py  tracking_media.py  user.py
db/: tables.py
db/migrations/versions/: 4b9c1fa6c56f_init.py  5014b91c1304_add_media.py
src/api/: main.py
src/api/routes/: subscription.py  user.py  web.py
src/api/schemas/: payment.py  subscription.py  user.py
src/api/services/: payment.py  subscription.py  tracking.py  user.py
src/app/: controller.py  main.py
src/app/handlers/: __init__.py  error.py  start.py  subscription.py  support.py  tracking.py  tracking_follower.py  tracking_following.py  tracking_media.py
src/app/repositories/: cloudpayments.py  instagram.py  keyboard.py  subscription.py  tariff.py  tracking.py  tracking_media.py
src/app/schemas/: action_callback.py  exception.py  exceptions.py  forms.py  instagram.py  message.py  texts.py
src/app/services/: subscription.py  support.py  tracking.py  tracking_follower.py  user.py  (+3 more)
src/db/: tables.py
static/: privacy.html  terms.html
templates/: paywall.html  paywall_big_tracking.html  paywall_requests.html
(+9 files in other folders)
